--- a/HotelAdministradorFrontend/src/app/app.component.html
+++ b/HotelAdministradorFrontend/src/app/app.component.html
@@ -43,10 +43,10 @@
                                 <a class="nav-link" routerLink="/Habitaciones/detalle-habitacion" >Detalle Habitacion <span class="badge badge-secondary">New</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="pages/general.html">Tipo Habitacion</a>
+                                <a class="nav-link" routerLink="Control_Habitaciones/tipo-habitacion" >Tipo Habitacion</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="pages/general.html">Habitacion</a>
+                                <a class="nav-link" routerLink="habitaciones/habitacion" >Habitacion</a>
                             </li>
                         </ul>
                     </div>
