--- a/HotelFrontend/src/app/app.component.html
+++ b/HotelFrontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark navbar-expand-lg fixed-top" id="mainNav" style="opacity: 1;background-color: rgba(52,58,64,0.75);">
-  <div class="container"><a class="navbar-brand js-scroll-trigger" routerLink="home" style="color: rgb(255,165,85);">Hotel Wimbledon</a><button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarResponsive" type="button" data-toogle="collapse"
+  <div class="container"><a class="navbar-brand js-scroll-trigger" routerLink="home" style="color: rgb(255,165,85);">Hostal S.A</a><button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarResponsive" type="button" data-toogle="collapse"
           aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" style="background-color: rgb(255,165,85);"><i class="fa fa-bars" style="color: rgba(255,255,255,0.75);"></i></button>
       <div class="collapse navbar-collapse"
           id="navbarResponsive">
