--- a/HotelAdministradorFrontend/src/app/pages/checkin/checkin.component.html
+++ b/HotelAdministradorFrontend/src/app/pages/checkin/checkin.component.html
@@ -31,9 +31,9 @@
                     <label for="input-select">Tipo de Habitacion</label>
                     <select class="form-control col-12" id="input-select">
                         <option>Seleccione</option>
-                                    <option>Suit</option>
-                                    <option>Con Yacusi</option>
-                                    <option>Basica</option>                                   
+                                    <option>Suit Presidencial</option>
+                                    <option>Economica</option>
+                                    <option>Duplex</option>                                   
                     </select>
                 </div>
             </div>
