--- a/HotelAdministradorFrontend/src/app/pages/tipo-habitacion/registro-tipo-habitacion/registro-tipo-habitacion.component.html
+++ b/HotelAdministradorFrontend/src/app/pages/tipo-habitacion/registro-tipo-habitacion/registro-tipo-habitacion.component.html
@@ -32,7 +32,7 @@
         
                 </div>
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="../assets/images/card-img-1.jpg" alt="First slide">
+                    <img class="d-block w-100" src="https://dmdiluminacion.com/wp-content/uploads/hotel-lp-012-1200x498.jpg" alt="First slide">
                 </div>
                 <div class="custom-file mb-3">
                     <input type="file" class="custom-file-input" id="customFile">
