--- a/HotelAdministradorFrontend/src/app/pages/usuarios/usuarios.component.html
+++ b/HotelAdministradorFrontend/src/app/pages/usuarios/usuarios.component.html
@@ -78,15 +78,15 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>Jgutierrezp</td>
-                            <td>Jhon julian Gutierrez</td>
-                            <td>Administrador</td>
-                            <td>29/08/2021</td>
-                            <td>Activo</td>
+                        <tr *ngFor="let item of listaUsuario" >
+                            <td>{{item.tx_Username}}</td>
+                            <td>{{item.tx_Nombre_Completo}}</td>
+                            <td>{{item.tx_nombre_perfil}}</td>
+                            <td>{{item.fe_registro_str}}</td>
+                            <td>{{item.tx_Situacion_Nombre}}</td>
                             <td>
                                 
-                                <button      type="button" title="Eliminar"class="btn btn-secondary btn-sm mr-2"><i class="mdi mdi-delete"></i></button> 
+                                <button      type="button" title="Eliminar"class="btn btn-secondary btn-sm mr-2" data-toggle="modal" data-target="#exampleModal"><i class="mdi mdi-delete"></i></button> 
                                                 <button type="button" title="Editar" class="btn btn-secondary btn-sm mr-2" routerLink="/usuarios/registro-usuario"><i class="mdi mdi-account-edit"></i></button>
 
                             </td>
@@ -105,3 +105,26 @@
     <!-- end validation form -->
     <!-- ============================================================== -->
 </div>
+
+
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Eliminar</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Aceptar</button>
+        </div>
+      </div>
+    </div>
+  </div>
