--- a/HotelAdministradorFrontend/src/app/pages/usuarios/usuarios.component.html
+++ b/HotelAdministradorFrontend/src/app/pages/usuarios/usuarios.component.html
@@ -87,7 +87,7 @@
                             <td>
                                 
                                 <button      type="button" title="Eliminar"class="btn btn-secondary btn-sm mr-2" data-toggle="modal" data-target="#exampleModal"><i class="mdi mdi-delete"></i></button> 
-                                                <button type="button" title="Editar" class="btn btn-secondary btn-sm mr-2" routerLink="/usuarios/registro-usuario"><i class="mdi mdi-account-edit"></i></button>
+                                                <button type="button" title="Editar" class="btn btn-secondary btn-sm mr-2" routerLink="/usuarios/registro-usuario/{{item.co_Tipo_Doc}}/{{item.tx_Numero_Documento}}"><i class="mdi mdi-account-edit"></i></button>
 
                             </td>
                         </tr>
